# packages/sdk/openapi.json
@@ -2487,7 +2487,8 @@
                                       "type": "string",
                                       "enum": [
                                         "identity",
-                                        "configuration"
+                                        "configuration",
+                                        "scopes"
                                       ]
                                     },
                                     "required": {
@@ -6119,7 +6120,8 @@
                                       "type": "string",
                                       "enum": [
                                         "identity",
-                                        "configuration"
+                                        "configuration",
+                                        "scopes"
                                       ]
                                     },
                                     "required": {
